# Django-Paper-Trading-App

./: Class Diagram.drawio  README.md  Sequence Diagram.drawio  StateMachineDiagram.drawio  Untitled Diagram.drawio  django design.drawio  pyproject.toml
Diagrams/: Class Diagram.drawio  django design.drawio
StockApp-old/: package-lock.json  package.json
StockApp-old/StockApp/: settings.py  urls.py  wsgi.py
StockApp-old/search/source/: metrics.py
StockApp-old/search2/: package.json
StockApp/StockApp/: asgi.py  settings.py  urls.py  wsgi.py
StockApp/api_app/: middleware.py  models.py  py.py  services.py  tests.py  websockets.py
StockApp/e2e tests/: tests.py
StockApp/search/: urls.py  views.py
StockApp/search/source/: metrics.py
StockApp/search2/: package-lock.json
StockApp/search2/src/: App.js
StockApp/stock_data_app/: admin.py  apps.py  forms.py  iexcloudapi.py  models.py  tests.py  urls.py  views.py
StockApp/stock_data_app/migrations/: 0001_initial.py  0002_rename_market_stock_description_and_more.py  0003_remove_stockprice_high_remove_stockprice_low_and_more.py  0004_alter_stockprice_date.py  0005_alter_stockprice_date.py  0006_alter_stock_id_alter_stockprice_date_and_more.py  0007_alter_stockprice_date.py  (+4 more)
StockApp/stock_tracker_app/: admin.py  apps.py  models.py  urls.py  views.py
StockApp/stocks_management_app/: apps.py  models.py  signals.py  tests.py
StockApp/templates/: base.html
StockApp/user_auth_and_profiles/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
static/: login.html  signup.html
(+29 files in other folders)
