[tool.poetry]
name = "django-paper-trading-app"
version = "0.1.0"
description = "Dependency management for paper-trading-app"
authors = ["Mohammed Nurul Islam <mohammed19.islam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
selenium = "^4.17.2"
pytest = "^8.0.0"
websocket = "^0.2.1"
websocket-client = "^1.7.0"
simplejson = "^3.19.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
